tekton/ci-workspace/infra/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    acme.cert-manager.io/http01-edit-in-place: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod
    dns.gardener.cloud/dnsnames: 'webhook.ci.dogfooding.tekton.dev'
    dns.gardener.cloud/ttl: "3600"
  name: ing
spec:
  tls:
  - secretName: webhook-ci-dogfooding-tekton-dev-tls
    hosts:
    - webhook.ci.dogfooding.tekton.dev
  rules:
  - host: webhook.ci.dogfooding.tekton.dev
    http:
      paths:
      - backend:
          serviceName: el-tekton-ci
          servicePort: 8080
        path: /*
